--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 </div>
 
 <!-- 引用外部 JavaScript 文件 -->
-<script src="https://sakakiichiki.github.io/star_dice/script.js"></script>
+<script src="/JS/script.js"></script>
 
 </body>
 </html>
