--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
             <label for="position">宮位</label>
             <select id="position">
                 <option value="">請選擇</option>
-                <option value="1">1</option>
+                <option value="1">第1宮(命宮)</option>
                 <option value="2">2</option>
                 <option value="3">3</option>
                 <option value="4">4</option>
