--- a/index.html
+++ b/index.html
@@ -105,18 +105,18 @@
             <label for="position">宮位</label>
             <select id="position">
                 <option value="">請選擇</option>
-                <option value="1">第1宮(命宮)</option>
-                <option value="2">2</option>
-                <option value="3">3</option>
-                <option value="4">4</option>
-                <option value="5">5</option>
-                <option value="6">6</option>
-                <option value="7">7</option>
-                <option value="8">8</option>
-                <option value="9">9</option>
-                <option value="10">10</option>
-                <option value="11">11</option>
-                <option value="12">12</option>
+                <option value="1">１ 宮(命宮)</option>
+                <option value="2">２ 宮(財帛宮)</option>
+                <option value="3">３ 宮(兄弟宮)</option>
+                <option value="4">４ 宮(田宅宮)</option>
+                <option value="5">５ 宮(男女宮)</option>
+                <option value="6">６ 宮(奴僕宮)</option>
+                <option value="7">７ 宮(夫妻宮)</option>
+                <option value="8">８ 宮(疾厄宮)</option>
+                <option value="9">９ 宮(遷移宮)</option>
+                <option value="10">１０ 宮(官祿宮)</option>
+                <option value="11">１１ 宮(福德宮)</option>
+                <option value="12">１２ 宮(玄秘宮)</option>
             </select>
         </form>
     </div>
